DAWG fix tokenitzar NY + Taulell Test